<?xml version="1.0"?>
<?xml-equiv="1.0" encoding="UTF-8"?>
<package format="3">
  <name>mono_slam</name>
  <version>0.0.0</version>
  <description>Simple monocular SLAM</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>Apache-2.0</license>
  
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
