<?xml version="1.0"?>
<?xml-equiv="1.0" encoding="UTF-8"?>
<package format="3">
  <name>simple_camera</name>
  <version>0.0.0</version>
  <description>Simple camera publisher</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>Apache-2.0</license>
  
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
